# gg

./: Cargo.toml  README.md
src/: ai.rs  app.rs  cli.rs  config.rs  editor.rs  lib.rs  main.rs  notes.rs  render.rs
tests/: cli_integration.rs
