[package]
name = "gg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11"
pulldown-cmark = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
toml = "1.0.6"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"



